--- a/html/ui.html
+++ b/html/ui.html
@@ -24,7 +24,7 @@
                 <div class="category-content">
                     <h2>PERROS</h2>
                     <p>Compañeros leales que te darán amor incondicional</p>
-                    <div class="stock">10 disponibles</div>
+                    <div class="stock">8 disponibles</div>
                 </div>
                 <div class="category-image dog-bg"></div>
                 <button class="view-btn">VER MASCOTAS <i class="fas fa-arrow-right"></i></button>
@@ -32,9 +32,9 @@
 
             <div class="category-card" onclick="box2()">
                 <div class="category-content">
-                    <h2>GATOS</h2>
+                    <h2>OTROS</h2>
                     <p>Amigos elegantes e independientes para tu hogar</p>
-                    <div class="stock">8 disponibles</div>
+                    <div class="stock">14 disponibles</div>
                 </div>
                 <div class="category-image others-bg"></div>
                 <button class="view-btn">VER MASCOTAS <i class="fas fa-arrow-right"></i></button>
@@ -49,22 +49,69 @@
             <h1 id="category-title">PERROS</h1>
         </div>
 
+        <div class="pets-container" id="kutucuk">
+            <!-- Las mascotas se agregarán dinámicamente aquí -->
+        </div>
+
         <div class="search-box">
             <i class="fas fa-search"></i>
             <input type="text" placeholder="Buscar mascota...">
         </div>
-
-        <div class="pets-container" id="kutucuk">
-            <!-- Las mascotas se agregarán dinámicamente aquí -->
-        </div>
     </div>
 
     <!-- Vista de Compra -->
+    <div class="controls">
+        <!-- Nuevo div para las instrucciones de zoom -->
+        <div class="zoom-instructions">
+            <p>
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 32 32">
+                    <g fill="#fff">
+                        <path
+                            d="M16.693 7.667a1 1 0 0 0-1.386 0L9.994 12.78c-.649.624-.207 1.72.693 1.72h3.063a.25.25 0 0 1 .25.25v9.75a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-9.75a.25.25 0 0 1 .25-.25h3.063c.9 0 1.342-1.096.693-1.72z" />
+                        <path
+                            d="M6 1a5 5 0 0 0-5 5v20a5 5 0 0 0 5 5h20a5 5 0 0 0 5-5V6a5 5 0 0 0-5-5zM3 6a3 3 0 0 1 3-3h20a3 3 0 0 1 3 3v20a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3z" />
+                    </g>
+                </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 32 32">
+                    <g fill="#fff">
+                        <path
+                            d="M14 8a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v9.75c0 .138.112.25.25.25h3.063c.9 0 1.342 1.096.693 1.72l-5.313 5.113a1 1 0 0 1-1.386 0L9.994 19.72c-.649-.625-.207-1.721.693-1.721h3.063a.25.25 0 0 0 .25-.25z" />
+                        <path
+                            d="M6 1a5 5 0 0 0-5 5v20a5 5 0 0 0 5 5h20a5 5 0 0 0 5-5V6a5 5 0 0 0-5-5zM3 6a3 3 0 0 1 3-3h20a3 3 0 0 1 3 3v20a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3z" />
+                    </g>
+                </svg>
+                <span>ZOOM</span>
+            </p>
+        </div>
+        <!-- Div existente para las instrucciones de rotación -->
+        <div class="rotation-instructions">
+            <p>
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 32 32">
+                    <g fill="#fff">
+                        <path
+                            d="M7.417 16.944a1 1 0 0 1 0-1.387l5.113-5.313c.624-.649 1.72-.207 1.72.693V14c0 .138.112.25.25.25h9.75a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H14.5a.25.25 0 0 0-.25.25v3.063c0 .9-1.096 1.342-1.72.693z" />
+                        <path
+                            d="M6 1a5 5 0 0 0-5 5v20a5 5 0 0 0 5 5h20a5 5 0 0 0 5-5V6a5 5 0 0 0-5-5zM3 6a3 3 0 0 1 3-3h20a3 3 0 0 1 3 3v20a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3z" />
+                    </g>
+                </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 32 32">
+                    <g fill="#fff">
+                        <path
+                            d="M24.833 15.621a1 1 0 0 1 0 1.387l-5.112 5.313c-.625.649-1.721.207-1.721-.693v-3.063a.25.25 0 0 0-.25-.25H8a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h9.75a.25.25 0 0 0 .25-.25v-3.063c0-.9 1.096-1.342 1.72-.693z" />
+                        <path
+                            d="M6 1a5 5 0 0 0-5 5v20a5 5 0 0 0 5 5h20a5 5 0 0 0 5-5V6a5 5 0 0 0-5-5zM3 6a3 3 0 0 1 3-3h20a3 3 0 0 1 3 3v20a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3z" />
+                    </g>
+                </svg>
+                <span>ROTAR</span>
+            </p>
+        </div>
+    </div>
+
     <div class="purchase-view">
         <div class="pet-display">
             <div class="pet-details">
                 <h2 id="pet-name">Nombre Mascota</h2>
-                <div class="price-tag">$<span id="pet-price">3,500</span></div>
+                <div class="price-tag">$<span id="pet-price"></span></div>
                 <div class="pet-description">
                     <p><i class="fas fa-info-circle"></i> Esta mascota es perfecta para familias y requiere cuidados
                         moderados.</p>
@@ -74,40 +121,8 @@
         </div>
 
         <div class="purchase-actions">
-            <input type="text" id="pet-name-input" placeholder="Nombre para tu mascota" maxlength="20">
-            <button class="buy-btn">COMPRAR <i class="fas fa-shopping-cart"></i></button>
+            <button class="buy-btn">COMPRAR</button>
             <button class="cancel-btn">CANCELAR</button>
-        </div>
-    </div>
-
-    <!-- Menú de Mascota -->
-    <div class="pet-menu">
-        <div class="pet-menu-header">
-            <h2><i class="fas fa-cog"></i> CONTROLES DE MASCOTA</h2>
-            <button class="close-pet-menu"><i class="fas fa-times"></i></button>
-        </div>
-
-        <div class="pet-options">
-            <div class="pet-option" onclick="spawnpet()">
-                <i class="fas fa-dog"></i>
-                <span>Generar/Eliminar Mascota</span>
-            </div>
-            <div class="pet-option" onclick="vehicle()">
-                <i class="fas fa-car"></i>
-                <span>Entrar/Salir del Vehículo</span>
-            </div>
-            <div class="pet-option" onclick="sit()">
-                <i class="fas fa-chair"></i>
-                <span>Sentar/Levantar Mascota</span>
-            </div>
-            <div class="pet-option" onclick="sleep()">
-                <i class="fas fa-bed"></i>
-                <span>Dormir/Despertar Mascota</span>
-            </div>
-            <div class="pet-option delete-option" onclick="deletela()">
-                <i class="fas fa-trash-alt"></i>
-                <span>Eliminar Mascota Permanentemente</span>
-            </div>
         </div>
     </div>
 
